--- a/Desktop/sassworkshp-main/css/main.css
+++ b/Desktop/sassworkshp-main/css/main.css
@@ -111,8 +111,9 @@ body, html {
   font-size: 1.1rem;
   border-radius: 100px;
   color: white;
-  background-color: rgb(104, 104, 104);
-  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0) 0%, rgba(255, 121, 218, 0) 100%);
+  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  color: #fff;
+  background-color: #686868;
   cursor: pointer;
   transition-duration: 0.25s;
   box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
@@ -521,8 +522,9 @@ body, html {
   font-size: 1.1rem;
   border-radius: 100px;
   color: white;
-  background-color: rgb(104, 104, 104);
-  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0) 0%, rgba(255, 121, 218, 0) 100%);
+  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  color: #fff;
+  background-color: #686868;
   cursor: pointer;
   transition-duration: 0.25s;
   box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
@@ -598,7 +600,6 @@ body, html {
 .card__btn {
   height: 2rem;
   width: 2rem;
-  background-color: transparent;
   border: transparent 0px solid;
   padding: 0;
   display: flex;
