--- a/Desktop/sassworkshp-main/scss/abstracts/_mixins.scss
+++ b/Desktop/sassworkshp-main/scss/abstracts/_mixins.scss
@@ -6,9 +6,10 @@
     font-size: 1.1rem;
     border-radius: 100px;
     color: white;
-    background-color: rgb(104, 104, 104);
-    background-image: linear-gradient(0deg, color-scale($color-primary, -10%) 0%, color-scale($color-secondary, -10%) 100%);
+    
 
+    background-image: linear-gradient(0deg,rgba(147,86,220,.9),rgba(255,121,218,.9));    color: #fff;
+    background-color: #686868;
     cursor: pointer;
     transition-duration: 0.25s;
     box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
@@ -24,14 +25,7 @@
     }
   }
   
-  @function color-scale($color, $alpha-offset) {
-    // Votre implémentation pour ajuster l'alpha du $color
-    // Par exemple, vous pourriez utiliser la fonction rgba() pour ajuster l'alpha.
-    @return rgba($color, $alpha-offset);
-  }
-  @function adjust-opacity($color, $alpha-offset) {
-    @return rgba($color, $alpha-offset);
-  }
+ 
   .container {
     max-width: 1280px;
     margin: auto;
